--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -20,16 +20,18 @@ jobs:
     with:
       run_reuse_check: true
       run_version_check: true
-      run_security_scans: true
-      run_dep_version_check: true
+      bootstrap_tools: "go,gotools,nodejs,python,golang-lint,helm,shellcheck,hadolint,yq,jq,protolint"
+      run_dep_version_check: false
       cache_go: true
       run_build: true
       run_lint: true
       run_test: true
+      remove_cache_go: true
       run_validate_clean_folder: false
       run_docker_build: true
       run_helm_build: true
-      run_scan_containers: true
-      run_artifact: false
-      bootstrap_tools: "go,gotools,nodejs,python,golang-lint,helm,shellcheck,hadolint,yq,jq,protolint"
+      run_artifact: true
+      artifacts_path: |
+        ./build/coverage.out
+        ./build/coverage.xml
     secrets: inherit
