--- a/deployments/sre-exporter/Chart.yaml
+++ b/deployments/sre-exporter/Chart.yaml
@@ -5,8 +5,8 @@ apiVersion: v2
 name: sre-exporter
 description: A Helm chart for Edge Orchestrator SRE Exporter
 type: application
-version: 0.9.1
-appVersion: 0.9.1
+version: 0.9.2-dev
+appVersion: 0.9.2-dev
 annotations:
-  revision: be2025c99eabba5d1aa25758bf1f346f07d12cf2
-  created: "2025-06-17T11:08:22Z"
+  revision: d33e3c7078264e545093a4afef476bf1c6dc0811
+  created: "2025-06-18T08:25:04Z"
