--- a/deployments/sre-exporter/Chart.yaml
+++ b/deployments/sre-exporter/Chart.yaml
@@ -5,8 +5,8 @@ apiVersion: v2
 name: sre-exporter
 description: A Helm chart for Edge Orchestrator SRE Exporter
 type: application
-version: 0.9.3-dev
-appVersion: 0.9.3-dev
+version: 0.9.2
+appVersion: 0.9.2
 annotations:
-  revision: d33e3c7078264e545093a4afef476bf1c6dc0811
-  created: "2025-06-18T08:25:04Z"
+  revision: 8f4f999d65c907b9abe2148ce15b7aa9afdddaa1
+  created: "2025-10-20T16:24:47Z"
