Make api group configurable

--- a/deployments/sre-exporter/templates/external-secret-destination-ca.yaml
+++ b/deployments/sre-exporter/templates/external-secret-destination-ca.yaml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 {{- if and .Values.otelCollector.externalSecret.enabled .Values.otelCollector.tls.enabled .Values.otelCollector.tls.caSecret.enabled }}
-apiVersion: external-secrets.io/v1beta1
+apiVersion: {{ .Values.externalSecretsApiGroup }}
 kind: ExternalSecret
 metadata:
   name: sre-destination-ca-secret
